# SnakeGame

./: CMakeLists.txt  SnakeGame.cpp  SnakeGame.sln  SnakeGame.vcxproj  SnakeGame.vcxproj.filters  console.cpp  console.h  figure.cpp  figure.h  horizontalLine.cpp  horizontalLine.h  point.cpp  point.h  verticalLine.cpp  verticalLine.h
SnakeGame/x64/Debug/: SnakeGame.exe.recipe  SnakeGame.ilk  vc143.idb
SnakeGame/x64/Debug/SnakeGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SnakeGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
